# Cleanr_v3

./: README.md  pyproject.toml
cleanr/: cli.py  engine.py  io.py  report.py
cleanr_v3/: audit.py  detector.py  plugins.py  pyproject.toml  sample_audit.json  sample_output.csv  sample_report.json
cleanr_v3/cleanr/: imputer.py  profiler.py  schema.py
docs/: cleanr_v3_guide.html
