[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanr"
version = "3.0.0"
description = "Production-grade data cleaning engine"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.1",
    "openpyxl>=3.0",
    "chardet>=5.0",
]

[project.optional-dependencies]
parquet = ["pyarrow>=11"]
all     = ["pyarrow>=11"]

[project.scripts]
cleanr = "cleanr.cli:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["cleanr*"]
